renamed css file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100,200;300;400;700&display=swap");
 /* custom variables */
 :root {
   --clr-primary-dark: #444242;
@@ -10,65 +9,59 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-/* resets and general sets */
-html {
-  font-size: 100%;
-}
-
-body {
-  font-family: Montserrat, sans-serif;
-  font-weight: 400;
-  width: 100%;
-}
-
-.page {
-  width: 100%;
-  min-height: 100vh;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 li {
   list-style-type: none;
 }
 
-a {
-  text-decoration: none;
-  color: var(--clr-primary-light);
-}
-
-/* Utility classes */
-.opacity-30 {
-  opacity: 0.3;
-}
-
 .display-block {
   display: block;
 }
 
-#page1 {
-  background: -webkit-gradient(linear, left top, left bottom, from(#424442), to(#2d2d2d));
-  background: linear-gradient(#424442, #2d2d2d);
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.margin-top-3 {
+  margin-top: 3rem;
+}
+
+html {
+  font-size: 100%;
+}
+
+body {
+  background: var(--clr-primary-dark);
   color: var(--clr-primary-light);
+  font-family: Montserrat, sans-serif;
+}
+
+.page {
+  height: 100vh;
 }
 
 header {
+  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   place-content: space-between;
-  padding: 1em;
 }
 
-header:hamburger {
-  width: 1.3em;
+header #hamburger {
+  width: 1.5rem;
   height: auto;
   cursor: pointer;
 }
 
-/* turn off in mobile first */
-.qualities, nav, .light-beam-vert, .animation-container {
+nav {
   display: none;
 }
 
@@ -78,7 +71,7 @@ nav {
   right: 0;
   z-index: 999;
   width: 35%;
-  background: #2c2828;
+  background: #202727;
   height: 100vh;
   padding: 1em;
 }
@@ -105,73 +98,91 @@ nav .close-mobile-nav {
   width: 1em;
 }
 
-#page1 .hero {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.hero {
+  margin-top: 3rem;
   text-align: center;
-  margin-top: 4rem;
 }
 
-#page1 .hero .light-beam-vert {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(white), to(rgba(255, 255, 255, 0)));
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
-  width: 1px;
-  height: 50vh;
-  border: none;
+.hero .animation-container {
+  display: none;
 }
 
-#page1 .hero .title {
-  padding: 0 4rem;
+.hero .hero-text {
+  padding: 0 1.5rem;
 }
 
-#page1 .hero .title .light-beam-horiz {
+.hero .hero-text .qualities {
+  display: none;
+}
+
+.hero .hero-text .title .light-beam-horiz {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(white), to(rgba(255, 255, 255, 0)));
   background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
-  width: 80vw;
+  width: 100%;
   height: 1px;
   border: none;
 }
 
-#page1 .hero .title h1 {
-  margin: 0;
+.hero .hero-text .title h1 {
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   line-height: 1.4rem;
   letter-spacing: 0.2rem;
 }
 
-#page1 .hero .title .spacer {
+.hero .hero-text .subtitle {
   margin-top: 3rem;
-}
-
-#page1 .hero .subtitle {
-  margin-top: 4rem;
-  padding: 0 4rem;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-weight: 200;
   opacity: 0.6;
-  line-height: 1.5rem;
+  line-height: 1.1rem;
 }
 
-#page1 .hero .primary-cta {
-  margin-top: 4rem;
+.hero .cta {
+  margin-top: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  place-items: center;
+}
+
+.hero .cta .primary-cta {
   background: var(--clr-accent);
   display: block;
-  width: 7rem;
   border-radius: 5rem;
   padding: 0.5rem 1rem;
   font-weight: 700;
+  display: none;
 }
 
-#page1 .hero .secondary-cta {
+.hero .cta .secondary-cta {
+  display: none;
+  margin-top: 1rem;
   opacity: 0.5;
-  margin-top: 2rem;
-  font-size: 0.6rem;
+  font-size: 0.5rem;
 }
 
-#page1 .hero .secondary-cta a {
+.hero .cta .secondary-cta a {
   text-decoration: underline;
+}
+
+.hero .cta .email {
+  margin-top: 4rem;
+  font-size: 0.5rem;
+}
+
+.hero .cta .email span {
+  display: block;
+  font-size: 0.7rem;
+}
+
+#contact {
+  background: var(--clr-primary-light);
+  color: var(--clr-primary-dark);
 }
 /*# sourceMappingURL=style.css.map */
