--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100,200;300;400;700&display=swap");
 
 /* custom variables */
 :root {
@@ -7,177 +6,183 @@
   --clr-accent: #189191;
 }
 
+// resets
 * {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+li {
+    list-style-type: none;
 }
 
-/* resets and general sets */
+// Utility classes
+.display-block {
+    display: block;
+}
+.opacity-30 {
+    opacity: 0.3;
+}
+.margin-top-3 {
+    margin-top: 3rem;
+}
+
+// Typography
 html {
-  font-size: 100%;
+    font-size: 100%;
 }
 
 body {
-  font-family: Montserrat, sans-serif;
-  font-weight: 400;
-  width: 100%;
+    background: var(--clr-primary-dark);
+    color: var(--clr-primary-light);
+    font-family: Montserrat, sans-serif;
 }
 
 .page {
-  width: 100%;
-  min-height: 100vh;
-}
-
-li {
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-  color: var(--clr-primary-light);
-}
-
-/* Utility classes */
-.opacity-30 {
-  opacity: 0.3;
-}
-
-.display-block {
-  display: block;
-}
-
-#page1 {
-  background: linear-gradient(#424442, #2d2d2d);
-  color: var(--clr-primary-light);
+    height: 100vh;
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  place-content: space-between;
-  padding: 1em;
+    padding: 1rem;
+    display: flex;
+    place-content: space-between;
 
-  &:hamburger {
-    width: 1.3em;
-    height: auto;
-    cursor: pointer;
-  }
-
+    #hamburger {
+        width: 1.5rem;
+        height: auto;
+        cursor: pointer;
+      }
 }
-
-/* turn off in mobile first */
-.qualities, nav, .light-beam-vert, .animation-container {
-  display: none;
-}
-
-
 
 nav {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 999;
-  width: 35%;
-  background: #2c2828;
-  height: 100vh;
-  padding: 1em;
+    display: none;
+}
 
-  .primary-nav-links {
-    margin-top: 4em;
-  }
+nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    width: 35%;
+    background: #202727;
+    height: 100vh;
+    padding: 1em;
 
-  li a {
-    display: block;
-    text-align: right;
-    padding: 0.7em 0.5em;
-    font-size: 1.3em;
-  }
+    .primary-nav-links {
+        margin-top: 4em;
+    }
 
-  li:hover {
-    font-weight: 700;
-  }
+    li {
+        a {
+        display: block;
+        text-align: right;
+        padding: 0.7em 0.5em;
+        font-size: 1.3em;
+      }
+    }
+    li:hover {
+        font-weight: 700;
+    }
 
-  .close-mobile-nav {
-    float: right;
-    margin: 0.5em;
-    cursor: pointer;
-    width: 1em;
-  }
+    .close-mobile-nav {
+        float: right;
+        margin: 0.5em;
+        cursor: pointer;
+        width: 1em;
+      }
 
 }
 
-#page1 {
-  
-  .hero {
-    display: flex;
+.hero {
+    margin-top: 3rem;
     text-align: center;
-    margin-top: 4rem;
 
-    .light-beam-vert {
-      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
-      width: 1px;
-      height: 50vh;
-      border: none;
+    .animation-container {
+        display: none; // off in mobile first
     }
 
-    .title {
-      padding: 0 4rem;
+    .hero-text {
+        padding: 0 1.5rem;
 
-      .light-beam-horiz {
-        background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(white), to(rgba(255, 255, 255, 0)));
-        background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
-        width: 80vw;
-        height: 1px;
-        border: none;
-      }
+        .qualities {
+            display: none; // off in mobile first
+        }
 
-      h1 {
-        margin: 0;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 1.4rem;
-        line-height: 1.4rem;
-        letter-spacing: 0.2rem;
-      }
+        .title {
 
-      .spacer {
+            .light-beam-horiz {
+                background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
+                width: 100%;
+                height: 1px;
+                border: none;
+              }
+
+            h1 {
+                text-transform: uppercase;
+                font-weight: 700;
+                font-size: 1.3rem;
+                line-height: 1.4rem;
+                letter-spacing: 0.2rem;
+              }
+
+        }
+
+        .subtitle {
+            margin-top: 3rem;
+            font-size: 0.7rem;
+            font-weight: 200;
+            opacity: 0.6;
+            line-height: 1.1rem;
+          }
+    }
+
+    .cta {
+
         margin-top: 3rem;
-      }
+        display: flex;
+        flex-direction: column;
+        place-items: center;
+
+        .primary-cta {
+
+            background: var(--clr-accent);
+            display: block;
+            border-radius: 5rem;
+            padding: 0.5rem 1rem;
+            font-weight: 700;
+
+            display: none; // hide until implemented
+        }
+
+        .secondary-cta {
+            display: none; // hide until implemented
+            margin-top: 1rem;
+            opacity: 0.5;
+            font-size: 0.5rem;
+
+            a {
+                text-decoration: underline;
+              }
+          }
+
+          .email {
+              margin-top: 4rem;
+              font-size: 0.5rem;
+
+              span {
+                  display: block;
+                  font-size: 0.7rem;
+              }
+          }
 
     }
+}
 
-    .subtitle {
-      margin-top: 4rem;
-      padding: 0 4rem;
-      font-size: 0.8rem;
-      font-weight: 200;
-      opacity: 0.6;
-      line-height: 1.5rem;
-    }
-
-    .primary-cta {
-      margin-top: 4rem;
-      background: var(--clr-accent);
-      display: block;
-      width: 7rem;
-      border-radius: 5rem;
-      padding: 0.5rem 1rem;
-      font-weight: 700;
-    }
-
-    .secondary-cta {
-      opacity: 0.5;
-      margin-top: 2rem;
-      font-size: 0.6rem;
-
-      a {
-        text-decoration: underline;
-      }
-    }
-
-  }
-
-} 
+#contact {
+    background: var(--clr-primary-light);
+    color: var(--clr-primary-dark);
+}
