--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,7 @@
-/* custom variables */
 :root {
-  --clr-primary-dark: #444242;
-  --clr-primary-light: white;
-  --clr-accent: #189191;
+  --clr-primary-dark: #444444;
+  --clr-primary-light: #ffffff;
+  --clr-primary-accent: rgb(97, 150, 211);
 }
 
 * {
@@ -21,126 +20,30 @@ li {
   list-style-type: none;
 }
 
-.display-block {
-  display: block;
-}
-
-.opacity-30 {
-  opacity: 0.3;
-}
-
-.margin-top-3 {
-  margin-top: 3rem;
-}
-
 html {
   font-size: 100%;
-}
-
-body {
-  background: var(--clr-primary-dark);
-  color: var(--clr-primary-light);
-  font-family: Montserrat, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .page {
   height: 100vh;
 }
 
-header {
-  padding: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  place-content: space-between;
-}
-
-header #hamburger {
-  width: 1.5rem;
-  height: auto;
-  cursor: pointer;
-}
-
-nav {
+.hidden {
   display: none;
 }
 
-nav {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 999;
-  width: 35%;
-  background: #202727;
-  height: 100vh;
-  padding: 1em;
-}
-
-nav .primary-nav-links {
-  margin-top: 4em;
-}
-
-nav li a {
+.display-block {
   display: block;
-  text-align: right;
-  padding: 0.7em 0.5em;
-  font-size: 1.3em;
 }
 
-nav li:hover {
-  font-weight: 700;
+.opacity-30 {
+  opacity: 0.30;
 }
 
-nav .close-mobile-nav {
-  float: right;
-  margin: 0.5em;
-  cursor: pointer;
-  width: 1em;
-}
-
-.hero {
-  margin-top: 3rem;
-  text-align: center;
-}
-
-.hero .animation-container {
-  display: none;
-}
-
-.hero .hero-text {
-  padding: 0 1.5rem;
-}
-
-.hero .hero-text .qualities {
-  display: none;
-}
-
-.hero .hero-text .title .light-beam-horiz {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(white), to(rgba(255, 255, 255, 0)));
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
-  width: 100%;
-  height: 1px;
-  border: none;
-}
-
-.hero .hero-text .title h1 {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1.3rem;
-  line-height: 1.4rem;
-  letter-spacing: 0.2rem;
-}
-
-.hero .hero-text .subtitle {
-  margin-top: 3rem;
-  font-size: 0.7rem;
-  font-weight: 200;
-  opacity: 0.6;
-  line-height: 1.1rem;
-}
-
-.hero .cta {
-  margin-top: 3rem;
+#page-01 {
+  background: var(--clr-primary-dark);
+  color: var(--clr-primary-light);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,41 +51,179 @@ nav .close-mobile-nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  place-items: center;
 }
 
-.hero .cta .primary-cta {
-  background: var(--clr-accent);
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-content: space-between;
+  padding: 1rem;
+}
+
+header nav {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 99;
+  padding: 1.1rem;
+  background: #47515c;
+  height: 100vh;
+  width: 40%;
+}
+
+header nav #close-mobile-menu {
+  width: 18px;
+  height: auto;
+  float: right;
+  cursor: pointer;
+}
+
+header nav ul {
+  margin-top: 5rem;
+}
+
+header nav ul li a {
   display: block;
-  border-radius: 5rem;
-  padding: 0.5rem 1rem;
-  font-weight: 700;
+  text-align: right;
+  padding: 0.7rem 0.5rem;
+  text-transform: uppercase;
+}
+
+header nav ul li:hover {
+  font-weight: bold;
+}
+
+header #mobile-menu {
+  width: 20px;
+  height: auto;
+  cursor: pointer;
+}
+
+#hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+  padding-top: 2rem;
+}
+
+#hero h1 {
   display: none;
 }
 
-.hero .cta .secondary-cta {
-  display: none;
+#hero .roles h2 {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.5rem;
+}
+
+#hero .roles h2 span {
+  display: block;
+}
+
+#hero .roles p {
+  opacity: 0.6;
+  line-height: 0.9rem;
+  font-weight: 200;
   margin-top: 1rem;
-  opacity: 0.5;
-  font-size: 0.5rem;
+  margin-bottom: 0.3rem;
+  font-size: 0.9rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
-.hero .cta .secondary-cta a {
-  text-decoration: underline;
-}
-
-.hero .cta .email {
-  margin-top: 4rem;
-  font-size: 0.5rem;
-}
-
-.hero .cta .email span {
+#hero .roles p span {
   display: block;
-  font-size: 1rem;
 }
 
-#contact {
-  background: var(--clr-primary-light);
-  color: var(--clr-primary-dark);
+#hero .roles .secondary-cta {
+  text-decoration: underline;
+  opacity: 0.6;
+  font-size: 0.6rem;
+  font-weight: 100;
+}
+
+#hero .roles .webdev {
+  margin: 1.5rem 0;
+  padding: 1.5rem 0;
+  border-top: 2px solid;
+  border-image-source: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
+  border-image-slice: 1;
+}
+
+#hero .primary-cta {
+  background: var(--clr-primary-accent);
+  color: var(--clr-primary-light);
+  width: 7rem;
+  padding: 5px 7px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8rem;
+  margin: auto;
+}
+
+#hero .primary-cta a:hover {
+  cursor: pointer;
+}
+
+@media screen and (min-height: 660px) {
+  #hero {
+    padding-top: 4rem;
+  }
+}
+
+@media screen and (min-height: 730px) {
+  #hero {
+    padding-top: 2rem;
+  }
+  #hero .roles h2 {
+    font-size: 2rem;
+    line-height: 1.8rem;
+  }
+  #hero .roles p {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+  }
+  #hero .roles .secondary-cta {
+    font-size: 0.8rem;
+  }
+  #hero .roles .webdev {
+    margin: 1.8rem 0;
+    padding: 1.8rem 0;
+  }
+}
+
+@media screen and (min-height: 800px) {
+  #hero {
+    padding-top: 3rem;
+  }
+  #hero .roles .webdev {
+    margin: 2rem 0;
+    padding: 2rem 0;
+  }
+  #hero .primary-cta {
+    width: 10rem;
+    padding: 6px 9px;
+    font-size: 1rem;
+  }
+}
+
+#hero .primary-cta {
+  width: 100%;
+  border-radius: 0;
+}
+
+#hero a:hover {
+  cursor: none;
 }
 /*# sourceMappingURL=style.css.map */
