--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,188 +1,234 @@
-
-/* custom variables */
 :root {
-  --clr-primary-dark: #444242;
-  --clr-primary-light: white;
-  --clr-accent: #189191;
+    --clr-primary-dark: #444444;
+    --clr-primary-light: #ffffff;
+    --clr-primary-accent: rgb(97, 150, 211);
 }
 
-// resets
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 a {
     color: inherit;
     text-decoration: none;
 }
+
 li {
     list-style-type: none;
 }
 
-// Utility classes
-.display-block {
-    display: block;
-}
-.opacity-30 {
-    opacity: 0.3;
-}
-.margin-top-3 {
-    margin-top: 3rem;
-}
-
-// Typography
 html {
     font-size: 100%;
-}
-
-body {
-    background: var(--clr-primary-dark);
-    color: var(--clr-primary-light);
-    font-family: Montserrat, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .page {
     height: 100vh;
 }
 
-header {
-    padding: 1rem;
-    display: flex;
-    place-content: space-between;
 
-    #hamburger {
-        width: 1.5rem;
-        height: auto;
-        cursor: pointer;
-      }
-}
 
-nav {
+.hidden {
     display: none;
 }
-
-nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 999;
-    width: 35%;
-    background: #202727;
-    height: 100vh;
-    padding: 1em;
-
-    .primary-nav-links {
-        margin-top: 4em;
-    }
-
-    li {
-        a {
-        display: block;
-        text-align: right;
-        padding: 0.7em 0.5em;
-        font-size: 1.3em;
-      }
-    }
-    li:hover {
-        font-weight: 700;
-    }
-
-    .close-mobile-nav {
-        float: right;
-        margin: 0.5em;
-        cursor: pointer;
-        width: 1em;
-      }
-
+.display-block {
+    display: block;
+}
+.opacity-30 {
+    opacity: 0.30;
 }
 
-.hero {
-    margin-top: 3rem;
+#page-01 {
+    background: var(--clr-primary-dark);
+    color: var(--clr-primary-light);
+
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    place-content: space-between;
+    padding: 1rem;
+    //background: green;
+
+    nav {
+        display: none;
+
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 99;
+        padding: 1.1rem;
+        background: rgb(71, 81, 92);
+        height: 100vh;
+        width: 40%;
+
+        #close-mobile-menu {
+            width: 18px;
+            height: auto;
+            float: right;
+            cursor: pointer;
+        }
+
+        ul {
+            margin-top: 5rem;
+
+            li {
+                a {
+                    display: block;
+                    text-align: right;
+                    padding: 0.7rem 0.5rem;
+                    text-transform: uppercase;
+                }
+
+                &:hover {
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+
+    #mobile-menu {
+        width: 20px;
+        height: auto;
+        cursor: pointer;
+    }
+}
+
+#hero {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
     text-align: center;
+    padding-top: 2rem;
 
-    .animation-container {
-        display: none; // off in mobile first
+
+    //background: yellow;
+
+    h1 {
+        display: none;
     }
 
-    .hero-text {
-        padding: 0 1.5rem;
+    .roles {
 
-        .qualities {
-            display: none; // off in mobile first
+        //background: purple;
+
+        h2 {
+            font-weight: 400;
+            font-size: 1.6rem;
+            line-height: 1.5rem;
+            span {
+                display: block;
+            }
         }
 
-        .title {
-
-            .light-beam-horiz {
-                background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
-                width: 100%;
-                height: 1px;
-                border: none;
-              }
-
-            h1 {
-                text-transform: uppercase;
-                font-weight: 700;
-                font-size: 1.3rem;
-                line-height: 1.4rem;
-                letter-spacing: 0.2rem;
-              }
-
-        }
-
-        .subtitle {
-            margin-top: 3rem;
-            font-size: 0.7rem;
-            font-weight: 200;
+        p {
             opacity: 0.6;
-            line-height: 1.1rem;
-          }
-    }
+            line-height: 0.9rem;
+            font-weight: 200;
+            margin-top: 1rem;
+            margin-bottom: 0.3rem;
+            font-size: 0.9rem;
+            margin-left: 2rem;
+            margin-right: 2rem;
 
-    .cta {
-
-        margin-top: 3rem;
-        display: flex;
-        flex-direction: column;
-        place-items: center;
-
-        .primary-cta {
-
-            background: var(--clr-accent);
-            display: block;
-            border-radius: 5rem;
-            padding: 0.5rem 1rem;
-            font-weight: 700;
-
-            display: none; // hide until implemented
+            span {
+                display: block;
+            }
         }
 
         .secondary-cta {
-            display: none; // hide until implemented
-            margin-top: 1rem;
-            opacity: 0.5;
-            font-size: 0.5rem;
+            text-decoration: underline;
+            opacity: 0.6;
+            font-size: 0.6rem;
+            font-weight: 100;
+        }
 
-            a {
-                text-decoration: underline;
-              }
-          }
+        .webdev {
+            margin: 1.5rem 0;
+            padding: 1.5rem 0;
+            border-top: 2px solid;
+            border-image-source: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255), rgba(255, 255, 255, 0));
+            border-image-slice: 1;
+        }
+    }
 
-          .email {
-              margin-top: 4rem;
-              font-size: 0.5rem;
+    .primary-cta {
+        background: var(--clr-primary-accent);
+        color: var(--clr-primary-light);
+        width: 7rem;
+        padding: 5px 7px;
+        border-radius: 20px;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 0.8rem;
+        margin: auto;
 
-              span {
-                  display: block;
-                  font-size: 1rem;
-              }
-          }
-
+        a:hover {
+            cursor: pointer;
+        }
     }
 }
 
-#contact {
-    background: var(--clr-primary-light);
-    color: var(--clr-primary-dark);
+@media screen and (min-height: 660px) {
+    #hero {
+        padding-top: 4rem;
+    }
+}
+
+@media screen and (min-height: 730px) {
+    #hero {
+        padding-top: 2rem;
+
+        .roles {
+            h2 {
+                font-size: 2rem;
+                line-height: 1.8rem;
+            }
+            p {
+                font-size: 1.2rem;
+                line-height: 1.5rem;
+            }
+            .secondary-cta {
+                font-size: 0.8rem;
+            }
+            .webdev {
+                margin: 1.8rem 0;
+                padding: 1.8rem 0;
+            }
+        }
+    }
+}
+
+@media screen and (min-height: 800px) {
+    #hero {
+        padding-top: 3rem;
+
+        .roles {
+            .webdev {
+                margin: 2rem 0;
+                padding: 2rem 0;
+            }
+        }
+
+        .primary-cta {
+            width: 10rem;
+            padding: 6px 9px;
+            font-size: 1rem;
+        }
+    }
+}
+
+#hero {
+    .primary-cta {
+        width: 100%;
+        border-radius: 0;
+    }
+
+    a:hover {
+        cursor: none;
+    }
 }
